<resources>
    <string name="app_name">JokesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_fragment_title">CHUCK NORRIS JOKES</string>
    <string name="btn_name_title">JOKES WITH CHARACTER NAMES</string>
    <string name="btn_list_title">NEVER-ENDING LIST OF JOKES</string>
    <string name="lbl_name_title">PLEASE ENTER THE FIRST AND LAST NAME OF CHARACTER</string>
    <string name="btn_getjoke_title">Get a Joke</string>
    <string name="txt_name_tool_tip_text">First And Last Name</string>
    <string name = "lbl_namefrag_instruction">TEXT VALIDATION\n \n At least 1 chatacter for the First and Last Name \n First and Last Name divided by space</string>
</resources>